# python-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: README.md  pyproject.toml  pytest.ini
