[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
description = ""
license = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]
readme = "README.md"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues"
"Changelog" = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.7.3"
rich = "^10.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"
black = "21.4b0"
poethepoet = "^0.10.0"
ipykernel = "^6.4.1"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120 # override the default of 88

[tool.poetry.scripts]
train = "scripts.train:train"
test = "scripts.test:test"
_train = "scripts._train.sh"

[tool.poe.tasks]
test = { "cmd" = "pytest tests --cov=. --cov-report term-missing", "help" = "Run all tests and get Code Coverage Report" }
test-postman = { "cmd" = "pytest tests/test_postman.py", "help" = "Run only tests against Postman" }
lint = [{ "ref" = "_lint-syntax" }, { "ref" = "_lint-full" }]

# private tasks
_lint-syntax = { "cmd" = "flake8 ./{{cookiecutter.project_slug}}./tests --select=E9,F63,F7,F82 --show-source", "help" = "Lint for syntax error and undefined names" }
_lint-full = { "cmd" = "flake8 ./{{cookiecutter.project_slug}} ./tests --exit-zero --max-complexity=10", "help" = "Lint for style, complexity, and everything else" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
